# SUSTech_Codes

./: README.md  新建文本文档.txt
CS208/QuickReader/src/: QuickRead1.java  QuickRead2.java
CS208/src/: HilbertCurve.java  Lab10_B.java  Lab11_A.java  Lab11_B.java  Lab12_A.java  Lab12_B.java  Lab4_B.java  Lab6_B.java  Lab8_A.java
CS301/STM32CubeIDE/wifi-communication/: .cproject  final-project.ioc
CS301/STM32CubeIDE/wifi-communication/Debug/: final-project.elf  final-project.hex  final-project.list  final-project.map  makefile
CS301/STM32CubeIDE/workspace/.metadata/: .log4j.xml  version.ini
CS301/STM32CubeIDE/workspace/Ass 1/: .cproject  .mxproject  .project  Ass 1 Debug.launch  Ass 1.ioc
CS301/STM32CubeIDE/workspace/Lab10/: .cproject  .mxproject  Lab10 Debug.launch  Lab10.ioc
CS301/STM32CubeIDE/workspace/Lab11/: .cproject  .mxproject  Lab11 Debug.launch  Lab11.ioc
CS301/STM32CubeIDE/workspace/Lab12/: .cproject  .mxproject  Lab10 Debug.launch  Lab10.ioc
CS301/STM32CubeIDE/workspace/Lab3/: .cproject  .mxproject  Lab3 Debug.launch  Lab3.ioc
CS301/STM32CubeIDE/workspace/Lab4/: .cproject  .mxproject  Lab4.ioc
CS301/STM32CubeIDE/workspace/Lab5/: .cproject  .mxproject  Lab5 Debug.launch  Lab5.ioc
CS301/embedded_2021fall/.metadata/: .log4j.xml  version.ini
CS301/embedded_2021fall/GPIO_2021FALL/: .cproject  .mxproject  .project  GPIO_2021FALL Release.launch  GPIO_2021FALL.ioc
ClionWorkshop/CTest/: a.out  test.c
ClionWorkshop/Demo/postgis-3.1.2dev/: ChangeLog  GNUmakefile  postgis_config.h  postgis_revision.h
ClionWorkshop/Demo/s2_postgis/: Makefile
ClionWorkshop/postgis-3.1.2dev/: config.status  configure  libtool
ClionWorkshop/postgis-3.1.2dev/doc/: Makefile
ClionWorkshop/postgis-3.1.2dev/extensions/: Makefile
ClionWorkshop/postgis-3.1.2dev/liblwgeom/: liblwgeom.h
ClionWorkshop/postgis-3.1.2dev/postgis/: Makefile  sqldefines.h
ClionWorkshop/postgis-3.1.2dev/regress/: Makefile
ClionWorkshop/postgis-3.1.2dev/utils/: Makefile
ClionWorkshop/proj_dist/: Makefile  proj_dist--0.0.1.sql  proj_dist.c  proj_dist.control
ClionWorkshop/s2_postgres/: CMakeLists.txt  s2--0.0.1.sql
ClionWorkshop/s2geometry/: Makefile  s2geometry--0.0.1.sql  s2geometry.control
ClionWorkshop/s2geometry/datatype/: s2cover.h  s2cover_inout.cc  s2point_inout.cc
ClionWorkshop/s2geometry/index/: range_covering.cc  range_query.cc
ClionWorkshop/s2geometry/proj_func/: proj_dist.cc
ClionWorkshop/s2geometry/s2/: s2latlng.cc  s2point_inout.cc  test.cc  test.cpp
ClionWorkshop/s2geometry_cmake/: CMakeLists.txt  s2geometry--0.0.1.sql
ClionWorkshop/s2geometry_cmake/src/s2/: s2latlng.cc  test.cc
ClionWorkshop/s2geometry_cmake/src/s2/base/: logging.h
ClionWorkshop/s2geometry_cmake/src/s2/util/gtl/: btree_map.h
ClionWorkshop/test/: Makefile  test--0.0.1.sql  test.cc  test.control
GoWorkshop/test/: geohash.go  test.go
IdeaWorkshop/CS208/src/: Lab0_prac.java  Lab1.java  Lab10_A.java  Lab13_A.java  Lab2.java  Lab3_A.java  Lab3_B.java  Lab5_A.java  Lab5_B.java  Lab6_A.java  Lab7_A.java  Lab8_B.java  Lab9_B.java  Main.java  test.java
IdeaWorkshop/CS309_OOAD/src/: table.css  table.html  table.js  table_asm2.css  table_asm2.html  table_asm2.js
IdeaWorkshop/Demo/: movies.txt
IdeaWorkshop/Demo/assignment 1/: Q1.java  Q2.java  Q3.java  Q4.java  Q5.java
IdeaWorkshop/Demo/src/: Cardioid.java  FileOperation.java  LeastPath.java  Main.java  TestClass.java  jEditorPane.java  test.java
IdeaWorkshop/Halma/: saveFor2.txt  saveFor4.txt
IdeaWorkshop/Halma game/src/: ChineseChecker.java
IdeaWorkshop/Halma/testCase/: saveFor2_alreadyEnd.txt  saveFor2_chessOutOfBound.txt  saveFor2_correctGame.txt  saveFor2_wrongChessNumber.txt  saveFor2_wrongPlayerNumber.txt  saveFor4_alreadyEnd(×).txt  saveFor4_chessOutOfBound.txt  saveFor4_correctGame.txt  saveFor4_wrongChessNumber.txt  saveFor4_wrongPlayerNumber.txt
IdeaWorkshop/KWIC/: KWIC.java
IdeaWorkshop/Lab13/src/: Demo.java
IdeaWorkshop/lab12/: resources.properties
IdeaWorkshop/lab12_original/service/: client.java
IdeaWorkshop/lab14/: A5Test.java
IdeaWorkshop/lab14/source_code_Refactoring/: ChildrensPrice.java  Customer.java  DateRange.java  Main.java  Movie.java  NewReleasePrice.java  Price.java  RegularPrice.java  Rental.java  TestMovieRental.java
IdeaWorkshop/observer-original/src/: Ball.java  BlueBall.java  MainPanel.java  RedBall.java  Subject.java  WhiteBall.java
IdeaWorkshop/source_code_Refactoring/: ChildrensPrice.java  Customer.java  DateRange.java  Main.java  Movie.java  NewReleasePrice.java  RegularPrice.java  Rental.java
Jupyter_Root/AI/Lab7/: Genetic_Algorithm.ipynb
Jupyter_Root/BigData_Introduction/Clustering_cars/: 汽车型号聚类.ipynb
Jupyter_Root/BigData_Introduction/Neighborhood_Clusters/: Neighborhood_Clusters.dbf
Jupyter_Root/BigData_Introduction/k-means_teenager/: teenager.html  teenager.ipynb
Jupyter_Root/BigData_Introduction/wine_random_forest_example/: wine_random_forest.ipynb  wine_random_forest_example.py
Jupyter_Root/BigData_Introduction/【案例】应用线性回归模型预测医疗费用/: LinearRegressionInsurance_Python.ipynb
Jupyter_Root/ChineseData/: Music_genre_classification.ipynb  text_emotion.ipynb
Jupyter_Root/ChineseData/.ipynb_checkpoints/: Music_genre_classification-checkpoint.ipynb
Jupyter_Root/DataBase_Principle/: DBProj1.ipynb
Jupyter_Root/DataBase_Principle/.ipynb_checkpoints/: DBProj1-checkpoint.ipynb
Jupyter_Root/Tutorial/: Tuple.ipynb
Jupyter_Root/大创/眼动/: eye_classification.ipynb
Jupyter_Root/大创/脑电/: test_classification.ipynb
PyCharmWorkshop/: RDA(copy).py  crawl_data.py  learnnumpy.py  main.py
PyCharmWorkshop/ComputerNetworks/Lab03/: lab03.py
PyCharmWorkshop/ComputerNetworks/Lab04/: web_proxy.py
PyCharmWorkshop/ComputerNetworks/Lab_Assignment1/: proxy_cache.json  web_proxy.py
PyCharmWorkshop/ComputerNetworks/Lab_Assignment2/: dns_iterative_q_client.py
PyCharmWorkshop/OOAD/: pacman_server.py
PyCharmWorkshop/OOAD_py_Interface/: 1002.txt  py_import_test.py
VueWorkshop/HotelList/hotel_list/: README.md  index.html  package-lock.json  package.json
(+732 files in other folders)
